k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 annotations:
  deployment.kubernetes.io/revision: '1'
 labels:
  app: frontendui
 name: frontendui
 namespace: default
spec:
 replicas: 1
 selector:
  matchLabels:
   app: frontendui
 strategy:
  type: RollingUpdate
  rollingUpdate:
   maxSurge: 1
   maxUnavailable: 1
 template:
  metadata:
   labels:
    app: frontendui
  spec:
   containers:
    - image: gremiumsoft/frontendui:latest
      imagePullPolicy: Always
      name: frontendui
      resources:
        limits:
          memory: 128Mi
        requests:
          memory: 64Mi
      terminationMessagePath: "/dev/termination-log"
      terminationMessagePolicy: File
   dnsPolicy: ClusterFirst
   restartPolicy: Always
   schedulerName: default-scheduler
   securityContext: {}
   terminationGracePeriodSeconds: 30
