k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontnedui-service
  namespace: default
  labels:
    app: frontnedui
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: frontnedui
  type: NodePort
