k8s/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontendui-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - gremium-gateway
  http:
  - route:
    - destination:
        host: frontendui-service.default.svc.cluster.local
        port:
          number: 80
